--- a/Views/landingView.html
+++ b/Views/landingView.html
@@ -4,8 +4,10 @@
     <title>Bienvenido a la App Estacion Meteorológica</title>
 </head>
 <body>
+	<h1>Hola desde landingView.html</h1>
     <h1>Bienvenido a la App Estacion Meteorologica</h1>
     <p>Esta aplicacion te proporciona informacion meteorologica de diferentes estaciones.</p>
-    <a href="panelView.html">Ir al Panel</a>
+    
+	<a href="{{URL_APP}}/panel">ir a panel</a>
 </body>
 </html>
